testsuite/tests/properties/invalid_map/correct.lkt
import common

class ListNode: FooNode {
    @parse_field nb_list: ASTList[NumberNode]

    @exported fun p1(): Array[Entity[NumberNode]] = self.nb_list.map((x) => x)

    @exported fun p2(): Array[Entity[NumberNode]] =
        self.nb_list.filtermap((x) => x, (_) => true)
}
